# node-obs

./: .gitignore  CMakeLists.txt  README.md  index.js  package.json
config/: basic.ini
source/: OBS_API.cpp  OBS_API.h  OBS_Display.cpp  OBS_audio.cpp  OBS_autoConfig.cpp  OBS_autoConfig.h  OBS_common.h  OBS_content.cpp  OBS_content.h  OBS_event.cpp  OBS_module.cpp  OBS_service.cpp  OBS_service.h  OBS_settings.cpp  OBS_settings.h  audio-encoders.cpp  audio-encoders.h  wrapperOBS.cpp
source/obspp/: obspp-manager.hpp
test/: obs-module.js
